inicio de sesion

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Blank
+      mi app
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -9,12 +9,44 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
+      <ion-title size="large">XNXX Nueva generacion</ion-title>
     </ion-toolbar>
   </ion-header>
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+
+
+
+  <ion-list>
+    <ion-item>
+      <ion-button routerLink="/cars">cards</ion-button>
+    </ion-item>
+    <ion-item>
+      <ion-button routerLink="/inicio-de-sesion">inicio de sesion</ion-button>
+    </ion-item>
+    <ion-item>
+      <ion-button routerLink="/calendario">calendario</ion-button>
+    </ion-item>
+    <ion-item>
+      <ion-button routerLink="/mensajes">mensajes</ion-button>    </ion-item>
+      <ion-item>
+        <ion-button routerLink="/notificaciones">notificaciones</ion-button>    </ion-item>
+
+        <ion-item>
+          <ion-button routerLink="/menu">menus</ion-button>    </ion-item>
+  </ion-list>
+
+
+  <ion-item>
+    <ion-button routerLink="/menu-volador">menu volador</ion-button>    </ion-item>
+
+
+    <ion-item>
+      <ion-button routerLink="/politica">politica</ion-button>    </ion-item>
+  
+      <ion-item>
+        <ion-button routerLink="/botones">botones</ion-button>    </ion-item>
+
+        <ion-item>
+          <ion-button routerLink="/conocenos">conocenos</ion-button>    </ion-item>
+  
 </ion-content>
