--- a/src/app/inicio-de-sesion/inicio-de-sesion.page.html
+++ b/src/app/inicio-de-sesion/inicio-de-sesion.page.html
@@ -13,13 +13,8 @@
 
   <ion-list>
     <ion-list>
-      <ion-item>
-        <ion-input label="Text input" placeholder="Enter text"></ion-input>
-      </ion-item>
+      
   
-      <ion-item>
-        <ion-input label="Number input" type="number" placeholder="000"></ion-input>
-      </ion-item>
   
       <ion-item>
         <ion-input label="Password input"  [(ngModel)]="password" value="password"></ion-input>
@@ -29,9 +24,7 @@
         <ion-input label="Email input"  [(ngModel)]="email" placeholder="email@domain.com"></ion-input>
       </ion-item>
   
-      <ion-item>
-        <ion-input label="Telephone input" type="tel" placeholder="888-888-8888"></ion-input>
-      </ion-item>
+     
     </ion-list>
   </ion-list>
 
@@ -50,4 +43,7 @@
   
 
 <ion-button color="primary" (click)="login()">Iniciar sesión</ion-button>
+<ion-button color="primary" routerLink="/registro">registrarse</ion-button>
+<ion-button color="primary" routerLink="/inicio">menu</ion-button>
+
 </ion-content>
