--- a/src/app/registro/registro.page.html
+++ b/src/app/registro/registro.page.html
@@ -11,27 +11,27 @@
     </ion-toolbar>
   </ion-header>
 
-
-  <ion-list>
+  <form (ngSubmit)="regist(registroForm)" #registroForm="ngForm">
     <ion-list>
       <ion-item>
-        <ion-input label="Text input" placeholder="Enter text"></ion-input>
+        <ion-input label="Nombre" placeholder="Enter text"></ion-input>
       </ion-item>
 
-  
       <ion-item>
-        <ion-input label="Password input" [(ngModel)]="password" value="password"></ion-input>
+        <ion-input label="Contraseña" [(ngModel)]="password" name="password" value="password"></ion-input>
       </ion-item>
-  
+
       <ion-item>
-        <ion-input label="Email input" [(ngModel)]="email" placeholder="email@domain.com"></ion-input>
+        <ion-input label="correo eletronico" [(ngModel)]="email" name="email" placeholder="email@domain.com"></ion-input>
       </ion-item>
-  
+
       <ion-item>
-        <ion-input label="Telephone input" [(ngModel)]="tel" placeholder="8888888888"></ion-input>
+        <ion-input label="Telefono" [(ngModel)]="tel" name="tel" placeholder="8888888888"></ion-input>
       </ion-item>
     </ion-list>
-  </ion-list>
 
-  <ion-button color="primary" (click)="registro()">registrarse</ion-button>
+    <ion-button color="primary" type="submit">registrarse</ion-button>
+    <ion-button routerLink="/inicio-de-sesion">volver</ion-button>    
+
+  </form>
 </ion-content>
